# chat_client

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: main.py
src/chat_for_us/: __init__.py  cli.py
src/server/: server.py
tests/: __init__.py  test_chat_for_us.py
