[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chat_for_us"
version = "0.1.0"
description = "Chatclient and practice"
readme = "README.rst"
authors = [
  {name = "Raja Kantheti", email = "rkanthet@uccs.edu"}
]
maintainers = [
  {name = "Raja Kantheti", email = "rkanthet@uccs.edu"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Marlboro522/chat_for_us/issues"
changelog = "https://github.com/Marlboro522/chat_for_us/blob/master/changelog.md"
homepage = "https://github.com/Marlboro522/chat_for_us"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

